add edit delete option

--- a/views/partials/main-nav.pug
+++ b/views/partials/main-nav.pug
@@ -14,4 +14,4 @@ nav.navbar.fixed-top.navbar-expand-lg.navbar-light.bg-light
         .dropdown-menu
           a.dropdown-item(href='/student') Student
           a.dropdown-item(href='/student/new') New Student
-          a.dropdown-item(href='/student/published') View
+          a.dropdown-item(href='/student/show') View
