--- a/views/student/show.pug
+++ b/views/student/show.pug
@@ -2,8 +2,8 @@ extends ../layouts/main.pug
 block content
   .container
     header
-      h1= student.title
+      h1= student.firstname
       small= student.status.toLowerCase()
 
     div
-      = student.content || "Your story is processing..."
+      = student.lastname || "Your story is processing..."
