--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -1,8 +1,8 @@
 extends ../layouts/main.pug
 block globals
-	- title = " about my super awsomde blogging plateform";
+	- title = " ";
 
 	body
 		h1#hrader = title
 
-		p.intro-text.second-class(data-attr="my value") It was a rainy day in Pizzavill
+		p.intro-text.second-class(data-attr="my value") 
